feat: add json server db and data request

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="container">
         <section id="authorization">
             <form action="" class="form">
+                <div id="info-widget">
+                    <div class="info"></div>
+                </div>
                 <h1>Login to your account</h1>
                 <div class="email-input">
                     <label>Email</label>
@@ -24,6 +27,6 @@
             </form>
         </section>
     </div>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
